# redigo

./: README.md  redigo.cabal  spawn.sh
redigo-service/: Main.hs
redigo-testkit/: Main.hs
src/: Redigo.hs
